# randomspanish

./: README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py
python/randomspanish/: #randomspanish.py#  randomspanish.py
python/randomspanish/data/: spanish_database_5000words.npy
python/randospanish/: randomspanish.py~  randospanish.py  utils.py  utils.py~
