[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "randospanish"
version = "1.0.0"
dependencies = [
  "scipy",
  "numpy",
  "matplotlib",
  "astropy",
  "dill",
  "dlnpyutils",
  "emcee",
  "corner",
  "annieslasso",
  "gdown",
]
requires-python = ">=3.9"
#requires-python = ">=3.11"
authors = [
  {name = "David Nidever", email = "dnidever@montana.edu"},
]
maintainers = [
  {name = "David Nidever", email = "dnidever@montana.edu"}
]
description = "App to learn spanish"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["language", "spanish"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
#Homepage = "https://example.com"
Documentation = "https://randospanish.readthedocs.org"
Repository = "https://github.com/dnidever/randospanish"
#Issues = "https://github.com/dnidever/randospanish/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
